--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,4 +1,5 @@
-body{
+html, body{ 
+    height:  100%;
     margin: 0px;
     padding: 0px;
 }
@@ -34,5 +35,20 @@ a:hover{
     height: 200px;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    flex: 1 0 auto;
+}
+.footer{
+    flex: 0 0 auto;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    
+}
+.forma form{
+    display: flex;
+      
     flex-direction: column;
 }
